# promptguard

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
config/: default.yaml  targets.example.yaml
data/known_answers/: known_answers.json
data/mock_documents/: mock_corpus.md
data/test_suites/: demo_smoke.yaml  gemini_smoke.yaml  owasp_2025_starter.yaml
docs/: adding-adapters.md  adding-tests.md  architecture.md  evaluator-design.md  report-methodology.md  threat-model.md
promptguard/: __init__.py  cli.py  config.py  constants.py  demo.py  exceptions.py  logging_config.py  target_loader.py  test_loader.py
promptguard/adapters/: base.py  factory.py  mock.py  openai_compatible.py  rest.py
promptguard/dashboard/: app.py
promptguard/evaluators/: base.py  deterministic.py  factory.py
promptguard/execution/: engine.py
promptguard/models/: enums.py  schemas.py
promptguard/reporting/: exporters.py
promptguard/reporting/templates/: report.html.j2
promptguard/repositories/: database.py
promptguard/security/: redaction.py
promptguard/services/: findings.py  metrics.py
tests/integration/: test_execution.py  test_reporting_cli.py
tests/unit/: test_evaluators.py  test_loader.py  test_redaction_metrics.py  test_target_loader.py
